--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Julia - I'm User Interface Designer & Developer.</title>
-  <meta name="title" content="Julia - I'm User Interface Designer & Developer.">
-  <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
+  <title>Christine's Portfolio'.</title>
+  <meta name="title" content="Christine - I'm a Computer Engineer.">
+  <meta name="description" content="This template was made by codewithsadee.">
 
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./C_logo.png" type="image/svg+xml">
 
   <!-- 
     - google font link
