--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     - primary meta tags
   -->
   <title>Christine's Portfolio</title>
-  <meta name="title" content="Christine - I'm a Computer Engineer.">
+  <meta name="title" content="Christine Famero's Portfolio Website">
   <meta name="description" content="This template was made by codewithsadee.">
 
   <!-- 
