--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
         <br> <br>
         <div class="btn-wrapper"></div>
-        <a href="C:\Users\xtine\OneDrive\Desktop\misc\work\christinefamero.github.io\portfolio\Famero_CV.pdf" class="btn btn-secondary">Read my CV</a>
+        <a href="https://turquoise-jolie-73.tiiny.site" class="btn btn-secondary">Read my CV</a>
 
       </section>
 
